# -clinical-psychology-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
api/: __init__.py  main.py  middleware.py
api/dependencies/: __init__.py
api/routers/: chat.py  clinical.py  health.py  ingest.py
api/schemas/: models.py
app_logging/: __init__.py  logger.py
clinical/: __init__.py  evidence_synthesizer.py  feature_extractor.py  formulation_generator.py  input_processor.py  llm.py  models.py  pipeline.py  query_generator.py  response_generator.py
clinical/case_understanding/: __init__.py  extractor.py  models.py
clinical/evaluation/: __init__.py  report.py  runner.py
clinical/evaluation/benchmarks/: __init__.py  cases.py
clinical/evaluation/metrics/: __init__.py  base.py  citation.py  formulation.py  hallucination.py  helpfulness.py  missing_info.py  relevance.py  retrieval.py  utils.py
clinical/evidence_synthesis/: __init__.py  models.py  synthesizer.py
clinical/formulation/: __init__.py  formulator.py  models.py
clinical/graph/: __init__.py  graph.py  nodes.py  state.py
clinical/missing_info/: __init__.py  detector.py  models.py
clinical/query_generation/: __init__.py  generator.py  models.py
clinical/response_generation/: __init__.py  generator.py  models.py
clinical/safety_validation/: __init__.py  models.py  validator.py
clinical/therapeutic_planning/: __init__.py  models.py  planner.py
config/: settings.py
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
ingestion/loaders/: __init__.py  exceptions.py  models.py  pdf_loader.py
ingestion/processors/: __init__.py  chunker.py  models.py
observability/: __init__.py  langfuse.py
rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
rag/retrieval/: __init__.py  bm25.py  fusion.py  reranker.py
scripts/: create_sample_pdf.py  run_evaluation.py  run_full_pipeline.py
utils/: env_check.py
(+26 files in other folders)
