[project]
name = "clinical-psychology-assistant"
version = "0.1.0"
description = "RAG-powered clinical psychology assistant for psychologists and clinicians"
requires-python = ">=3.11"
readme = "README.md"

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "api", "agents", "rag", "ingestion", "workflows", "config", "utils", "observability"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations (type hints)
]
ignore = [
    "ANN101",  # self type annotation
    "ANN102",  # cls type annotation
    "B008",    # FastAPI Depends() in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["api", "agents", "rag", "ingestion", "workflows", "config", "utils", "logging"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", ".venv/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "tests/*",
    "*/migrations/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
